--- a/Mumtaz.html
+++ b/Mumtaz.html
@@ -283,12 +283,14 @@
 
 <!----- Card ------>
 </div>
+
+<!----- Card ------>
 <section class="closings">
 </section>
 <section class="card">
-    <div class="container reveal fade-bottom">
-        <div class="tb1"><img src="Foto/closing.jpeg" alt=""></div></div>
-       
+        <div class="tb1"><img src="Foto/closing.jpeg" alt=""></div>
+    </div>
+
     <div class="container reveal fade-bottom"> <div class="cardiv">
 <h2>Thank you for always being a very sincere girlfriend and a very good mother figure WKWKWK. Just to let u know kita disini semuanya sayang sama Syifa Mumtaz so  <br>See u soon in Surabaya cantik!</h2>
 <p><strong>-With love, Rafi Arian Yusuf</strong></p>
