--- a/Mumtaz.html
+++ b/Mumtaz.html
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-    <audio autoplay src="Audip/cantiktanpabedak.mp3"></audio>
+    <audio autoplay loop src="Audip/cantiktanpabedak.mp3"></audio>
     <div class="Button">
     <a href="Mumtaz.html#sec-2" class="hero-btn" id="play">??????????</a>
 </div>
@@ -22,7 +22,7 @@
     <div class="fotomoom"><img src="Foto/png syifa moom.png"></div>
     <div class="vector2"><img src="Foto/Group 91.png"></div>
     <div class="text-box">
-    <p>Selamat ulang tahun untuk Syifa<br>Mumtaz yang senyumannya selalu<br>membawa kebahagiaan untuk kami<br>semua</p>
+    <p>Selamat ulang tahun untuk Syifa Mumtaz yang senyumannya selalu membawa kebahagiaan untuk kami semua</p>
 </section>
 
 <script src="script.js"></script>
@@ -97,8 +97,8 @@
     <h1>Happy 19th Birthday Syifa Mumtaz</h1></div>
     <div class="container reveal fade-right">
     <div class="pesanrafi">    
-    <p>Halo cantik aku. Maaf banget dihari spesial kamu yang ke 19 ini, aku gabisa hadir di Surabaya buat ngerayain ulang tahun kamu langsung ditempat. Dari aku harapannya Syifa Mumtaz makin rajin karena udah dapet IPAD, makin sayang sama orang tua(sama aku juga), makin disayang sama semua orang, segala pekerjaanya dilancarkan, dan apa yang diinginkan dapat terkabul. 
-    Sekali lagi <strong>HAPPY 19th BIRTHDAY</strong> ya sayangg semangat terus buat event-event dideket ini semoga semuanya lancar dan jadi pengalaman yang membuat kamu semakin mantap menjadi strong woman kedepannya!
+    <p>Halo cantik aku. Maaf banget dihari spesial kamu yang ke 19 ini, aku gabisa hadir di Surabaya buat ngerayain ulang tahun kamu langsung ditempat. Semoga Syifa Mumtaz makin rajin karena udah dapet IPAD, makin sayang sama orang tua(sama aku juga)trus makin disayang sama semua orang, segala pekerjaanya dilancarkan, dan apa yang diinginkan dapat terkabul. 
+    Sekali lagi <strong>HAPPY 19th BIRTHDAY</strong> ya sayangg semangat terus buat event-event dideket ini semoga semuanya lancar dan jadi pengalaman yang membuat kamu menjadi strong woman kedepannya!
     <br><strong>Hope only the best for u my dear Syifa hehehe ❤❤</strong> 
     </p>
     </div>
@@ -116,9 +116,8 @@
                  anggeng sama ayang rafi elek sujiwana dan semoga makin syank sma aq🥰🥰😍😍😍</p>
         </div>
         <div class="message-col">
-            <h3>Nangkring staff ise paling the best forever</h3>
-            <p> happy birthday mumtazzz semoga seiring bertambahnya usia semakin baik dan rezekinya selalu dilancarkan, semoga langgeng sama mas rafi arian yang paling ganteng. keren kalian semoga menjadi best couple dan semakin lucu unchhhh🥰
-                jangan lupa dikasih makan anak2 keongnya di dalem sepatu🐌</p>
+            <h3>Jeki</h3>
+            <p> Habede mumtas semoga cepat tumbuh</p>
         </div>
         <div class="message-col">
             <h3>Om IT Ganteng</h3>
@@ -272,16 +271,42 @@
             <p>semoga semakin uwow uwu </p>
         </div>
         <div class="message-col">
-            <h3>Bibi</h3>
-            <p>HAPPY BIRTHDAY CIPONGKII SEMOGA MAKIN GEDE </p>
+            <h3>salah satu anak "tutor kacamata" </h3>
+            <p>anak termultitalenta si kataku anjir kek u bisa apa aja?????? banyak banget! semoga bisa mertahanin itu dan jadi jauh lebih baik. smoga idup, agama, dan bucin tetep balanceee ❤ slaaaaayyyyy, oiya btw smangat rodsonya yank! </p>
         </div>
         <div class="message-col">
             <h3>Epang</h3>
             <p>habede</p>
         </div>
+        <div class="message-col">
+            <h3>tasya tmn moomtiz</h3>
+            <p>hAppY biRthDay yH mumz semoga panjang umur shat slalu dan bales pcku fastresp</p>
+        </div>
+        <div class="message-col">
+            <h3>Drh. Rayhan Arya heheeee</h3>
+            <p>selamat ulang tahun ya momtez semoga diberi kesabaran lebih menghadapi rapi yang sifatnya seperti anjing :))</p>
+        </div>
+        <div class="message-col">
+            <h3>theonlywiniyy</h3>
+            <p>semoga cpt tinggi & g mlete2😎🙌🏻</p>
+        </div>
+        <div class="message-col">
+            <h3>arek ganteng si(Nopal mesum)</h3>
+            <p>teko aku cukup singkat padat dan jelas ae yo mum, semoga apa yg mbok semogakan tersemogakan and stay jowo jok sampek terpengaruh kro bekasi, tresno tresno tresno darjo✊✊✊</p>
+        </div>
+        <div class="message-col">
+            <h3>Zada</h3>
+            <p>Semogaa yang disemogakan terkabulkan AAMIIN</p>
+        </div>
+        <div class="message-col">
+            <h3>cacul</h3>
+            <p>happy bday mumtizz😚😚 SUMPAH AKU GATAU KPN TERAKHIR KETEMU KM?!? kek tiap mau ketemu pasti adaaa aja yg gbisa😔 sedih😔😔😔 yh smoga panjang umur, sehat slalu, sukses dunia akhirat, lulus tepat wkt, dpt IPK sesuai target, langgeng yhhh🫶🏻, dan smoga cpt ketemu😔 LOV U MUMI HEPI BUDEY🫶🏻🫶🏻🫶🏻🫶🏻🫶🏻🫶🏻</p>
+        </div>
+        <div class="message-col">
+            <h3>dewang</h3>
+            <p>H.B.D. MUMTIS. terimakasih telah menjadi teman dan sumber jawaban yang baik selama ini. aku tdk bisa membayangkan nilai fisika ku tanpamu mum. maaf aku tdk menepati janjiku akan ambis semester 2, aku janji ambis semester 4. kalo ga ambis ya aku janji lagi aja nanti. wish u all the best mum. jgn dket2 ama rafi, mending ama faris.</p>
+        </div>
     </div>
-
-<!----- Card ------>
 </div>
 
 <!----- Card ------>
