--- a/Mumtaz.html
+++ b/Mumtaz.html
@@ -22,7 +22,7 @@
     <div class="fotomoom"><img src="Foto/png syifa moom.png"></div>
     <div class="vector2"><img src="Foto/Group 91.png"></div>
     <div class="text-box">
-    <p>Selamat ulang tahun untuk Syifa Mumtaz yang senyumannya selalu membawa kebahagiaan untuk kami semua</p>
+    <p>Selamat ulang tahun untuk Syifa Mumtaz yang senyumannya selalu membawa kebahagiaan untuk kami semua!</p>
 </section>
 
 <script src="script.js"></script>
@@ -349,7 +349,7 @@
         <img src="Foto/Carouselz/4.png">
       </div>
       <div id="slide-5">
-        <img src="Foto/FOTO(11) - Copy - Copy.jpg">
+        <img src="Foto/Carouselz/5.png">
       </div>
       <div id="slide-6">
         <img src="Foto/FOTO(11) - Copy - Copy.jpg">
