--- a/Mumtaz.html
+++ b/Mumtaz.html
@@ -306,6 +306,38 @@
             <h3>dewang</h3>
             <p>H.B.D. MUMTIS. terimakasih telah menjadi teman dan sumber jawaban yang baik selama ini. aku tdk bisa membayangkan nilai fisika ku tanpamu mum. maaf aku tdk menepati janjiku akan ambis semester 2, aku janji ambis semester 4. kalo ga ambis ya aku janji lagi aja nanti. wish u all the best mum. jgn dket2 ama rafi, mending ama faris.</p>
         </div>
+        <div class="message-col">
+            <h3>decitpul carry ML</h3>
+            <p>HABEDE MUMTEEZ, MOGA LANGGENG MA AYANG YAHH. MAKASIH BUAT RANGKUMAN STARTUP HMSI NYA :)</p>
+        </div>
+        <div class="message-col">
+            <h3>Greko</h3>
+            <p>semangat mumtas, semoga tahan2 sama rapi bocah iseng ajg sumpah</p>
+        </div>
+        <div class="message-col">
+            <h3>pu3</h3>
+            <p>habede cipongg🥳🤍 semoga yg disemogakan segera tersemogakan, dont forget traktiran :) di tunggu another trip kita</p>
+        </div>
+        <div class="message-col">
+            <h3>biduan maut</h3>
+            <p>HEPIBESDEY KAAKKKK 🥳 UWU 19 y.o NIII 🤩 semoga diberi kesehatan yaaa, dilancarin kuliahnyaa, langgeng sama mz pacar avvvv 😳dikasih kesabaran buat ngadepin kita-kitaaa 😎 makasih udah mau berteman dengan aqu, tetap mnjadi temanku yh lovyu 🫶</p>
+        </div>
+        <div class="message-col">
+            <h3>FERRROOOOOOOOOOOO</h3>
+            <p>MUMTAZ HBDDDDDDD SMANGAAAT </p>
+        </div>
+        <div class="message-col">
+            <h3>shf cantix</h3>
+            <p>KIW HAPPY BIRTHDAY MUMTAZZZ💖💖 semoga panjangggg umurrr sehatttt selaluuuuu bahagiaaa selaluuu🥰😘❤️🥳🫶🏻 wishhh u all thee bestttt pokokknyaaa yahhhhhh, sukses kuliah seyengg💕 sukses menjadi kasubdiv mabacup☝🏻☝🏻☝🏻 kecup manis dari aq utk qm😘😘</p>
+        </div>
+        <div class="message-col">
+            <h3>Nadhira Zulfa S</h3>
+            <p>Selamat ulang tahun mumtaz. Semoga lancar sampai hari H. Semakin happy kiyowo yaaaa. 💗</p>
+        </div>
+        <div class="message-col">
+            <h3>Orisvio</h3>
+            <p>Selamat ulang tahun mumtazz☝🏻, wish u all the bestt, lancar selalu kuliah dan kegiatane, sukses kuliah dan social life, nurut ortu, sukses dunia akhirat , pokok doa sing terbaik lah 🥳🎉 </p>
+        </div>
     </div>
 </div>
 
@@ -349,7 +381,7 @@
         <img src="Foto/Carouselz/4.png">
       </div>
       <div id="slide-5">
-        <img src="Foto/Carouselz/5.png">
+        <img src="Foto/Carouselz/5.JPG">
       </div>
       <div id="slide-6">
         <img src="Foto/FOTO(11) - Copy - Copy.jpg">
