--- a/Mumtaz.html
+++ b/Mumtaz.html
@@ -381,10 +381,10 @@
         <img src="Foto/Carouselz/4.png">
       </div>
       <div id="slide-5">
-        <img src="Foto/Carouselz/5.JPG">
+        <img src="Foto/Carouselz/Favouritephotoz.jpeg">
       </div>
       <div id="slide-6">
-        <img src="Foto/FOTO(11) - Copy - Copy.jpg">
+        <img src="Foto/Carouselz/5.JPG">
       </div>
     </div>
   </div>
