--- a/Mumtaz.html
+++ b/Mumtaz.html
@@ -40,7 +40,7 @@
 <div class="container reveal fade-bottom">
     <div class="img-gal">
     <img src="Foto/FOTO.jpg">
-    <img src="Foto/FOTO(1).jpg">
+    <img src="F.jpg">
     <img src="Foto/FOTO(2).jpg">
     <img src="Foto/FOTO(3).jpg">
     <img src="Foto/FOTO(6).jpg">
