--- a/Mumtaz.html
+++ b/Mumtaz.html
@@ -40,7 +40,7 @@
 <div class="container reveal fade-bottom">
     <div class="img-gal">
     <img src="Foto/FOTO.jpg">
-    <img src="F.jpg">
+    <img src="Foto/FOTO(1).jpg">
     <img src="Foto/FOTO(2).jpg">
     <img src="Foto/FOTO(3).jpg">
     <img src="Foto/FOTO(6).jpg">
@@ -78,7 +78,7 @@
     <img src="Galleria/g24.jpg">
     <img src="Galleria/g25.jpg">
     <img src="Galleria/g26.jpg">
-    <img src="Galleria/g27.jpg">
+    <img src="Galleria/g30.jpg">
        
 </div>
 </div>
