--- a/LP.html
+++ b/LP.html
@@ -8,11 +8,11 @@
     
 </head>
 <body>
-    <script>alert("HIMBAUAN!!!\nBuka Website Ini Dengan IPAD/LAPTOP\nApakah device anda sudah oke?")</script>
-    <script>alert("Jika Anda Menggunakan Ipad Silahkan Putar Ipad anda dan Gunakan Mode Landscape\nPastikan jaringan internet anda memadai dikarenakan akan terdapat banyak foto kuda!")</script>
+    <script>alert("HIMBAUAN!!!\nBuka Website Ini Dengan LAPTOP\nApakah device anda sudah oke?")</script>
+    <script>alert("Kalo pake ipad lagunya gak muncul, PAKE LAPTOP!\nPastikan jaringan internet anda memadai dikarenakan akan terdapat banyak foto kuda!")</script>
     <section class="header">
     <div class="hbd"><img src="Opening/Main Header.png"></div>
-    <div class="button"><a href="Mumtaz.html" class="herobutton">????</a></div>
+    <div class="button"><a href="Mumtaz.html" class="herobutton">Ini Tombol</a></div>
     <audio autoplay muted loop><source src="Audip/cantiktanpabedak.mp3"></audio>
     <div class="cover">
         <div class="vector5"><img src="Foto/Vektor/openingvektor.png"></div>
