--- a/Mumtaz.html
+++ b/Mumtaz.html
@@ -59,7 +59,7 @@
     <img src="Galleria/g6.jpg">
     <img src="Galleria/g7.jpg">
     <img src="Galleria/g8.jpg">
-    <img src="Galleria/g9.jpg">
+    <img src="Galleria/G2.png">
     <img src="Galleria/g10.jpg">
     <img src="Galleria/g11.jpg">
     <img src="Galleria/g23.jpg">
@@ -67,7 +67,7 @@
     <img src="Galleria/g14.jpg">
     <img src="Galleria/g15.jpg">
     <img src="Galleria/g28 1.jpg"> 
-    <img src="Galleria/g16.jpg">
+    <img src="Galleria/g16.png">
     <img src="Galleria/g17.jpg">
     <img src="Galleria/g18.jpg">
     <img src="Galleria/g19.jpg">
@@ -79,6 +79,10 @@
     <img src="Galleria/g25.jpg">
     <img src="Galleria/g26.jpg">
     <img src="Galleria/g27.jpg">
+    <img src="Galleria/GZ1.png">
+    <img src="Galleria/GZ3.png">
+    <img src="Galleria/GZ2.png">
+    <img src="Galleria/GZ4.png">
        
 </div>
 </div>
@@ -349,7 +353,7 @@
     </div>
 
     <div class="container reveal fade-bottom"> <div class="cardiv">
-<h2>Thank you for always being a very sincere girlfriend and a very good mother figure WKWKWK. Just to let u know kita disini semuanya sayang sama Syifa Mumtaz so  <br>See u soon in Surabaya cantik!</h2>
+<h2>Thank you for always being a very sincere girlfriend and a very good mother figure WKWKWK. Just to let u know kita disini semuanya sayang sama Syifa Mumtaz so  <br>See u soon in Surabaya cantik! <br>(Plot twist ak udh di surabaya)</h2>
 <p><strong>-With love, Rafi Arian Yusuf</strong></p>
 </div></div>
 </section>
@@ -366,6 +370,7 @@
     <a href="#slide-4">4</a>
     <a href="#slide-5">5</a>
     <a href="#slide-6">6</a>
+    <a href="#slide-7">7</a>
   
     <div class="slides">
       <div id="slide-1">
@@ -385,6 +390,9 @@
       </div>
       <div id="slide-6">
         <img src="Foto/Carouselz/5.JPG">
+      </div>
+      <div id="slide-7">
+        <img src="Foto/Carouselz/7.JPG">
       </div>
     </div>
   </div>
